resolved cors issue

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <div class="grid-container">
             <div class="grid-item-container grid-item-container1">
                 <div class="grid-item">
-                    <img class="grid-image" src="https://source.unsplash.com/random/300x500" alt="">
+                    <form action="">
+                      
+                    </form>
                 </div>
             </div>
 
