--- a/index.html
+++ b/index.html
@@ -5,55 +5,99 @@
        <title>Chase Franklin Responsive Grid</title>
         <style>
 
-            .grid-container {
-                margin: 2%;
-                padding: 1%;
-                display: grid;
-                grid-gap: 10px;
-                grid-template-rows: repeat (auto-fit, minmax(auto, 1fr));
+        .grid-container {
+            margin: 2%;
+            padding: 1%;
+            display: grid;
+            grid-template-rows: repeat (auto-fit, minmax(auto, 1fr));
+        }
 
-            }
+        .grid-item-container {
+            display: grid;
+            background-color: royalblue;
+            place-items: center center;
+            padding: 5%;
+            overflow: hidden;
+        }
 
-            .grid-item-container {
-                display: grid;
-                background-color: royalblue;
-                place-items: center center;
-                padding: 5%;
-                overflow: hidden;
-            }
+        form {
+          display: grid;
+          grid-template-columns: repeat(2, minmax(0px, 1fr));
+          grid-gap: 10px;
+        }
 
-            @media only screen and (max-width: 650px) {
-                .grid-container {
-                    grid-template-columns: repeat(1, 1fr);
-                }
-            }
-
-            @media only screen and (max-width: 650px) {
-                .grid-item {
-                    overflow: hidden;
-                }
-            }
 
         </style>
+        
     </head>
 
     <body>
+      <div class="grid-container">
+          <div class="grid-item-container grid-item-container1">
+            <form action="">
+              <div class="grid-item">
+                <input type="text" placeholder="First Name">
+              </div>
+              <div class="grid-item">
+                <label for="last">Last Name</label>
+                <input type="text" id="last">
+              </div>
+              <div class="grid-item">
+                <label for="email">E-mail</label>
+                <input type="text" id="email">
+              </div>
+              <div class="grid-item">
+                <label for="phone">Phone Number</label>
+                <input type="text" id="phone">
+              </div>
+              <div class="grid-item">
+                <label for="supervisor">Supervisor</label>
+                <select name="" id="supervisor"></select>
+              </div>
+            </form>
+
+          </div>
+      </div>
 
 
 
-        <div class="grid-container">
-            <div class="grid-item-container grid-item-container1">
+        <!-- <div class="grid-container">
+            <div class="grid-item-container">
+              <form action="https://o3m5qixdng.execute-api.us-east-1.amazonaws.com/api/submit" method="POST">
                 <div class="grid-item">
-                    <form action="">
-                      
-                    </form>
+                  <label for="first">First Name</label>
+                    <input type="text" id="first" >
                 </div>
+                <div class="grid-item">
+                  <label for="last">Last Name</label>
+                    <input type="text" id="last" >
+                </div>
+
+                <label for="last">Last Name</label>
+                  <input type="text" id="last">
+                <label for="email">E-mail</label>
+                  <input type="text" id="email">
+                <label for="phone">Phone Number</label>
+                <input type="text" id="phone">
+                <label for="cars">Choose a car:</label>
+                  <select name="cars" id="cars">
+                    <optgroup label="Swedish Cars">
+                      <option value="volvo">Volvo</option>
+                      <option value="saab">Saab</option>
+                    </optgroup>
+                    <optgroup label="German Cars">
+                      <option value="mercedes">Mercedes</option>
+                      <option value="audi">Audi</option>
+                    </optgroup>
+                  </select>
+              </form>
             </div>
 
-        </div>
+        </div> -->
 
 
     </body>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="index.js"></script>
 </html>
 <!--This was created by Chase Franklin-->
