--- a/index.html
+++ b/index.html
@@ -27,32 +27,38 @@
         }
 
 
+
+
         </style>
-        
+
     </head>
 
     <body>
       <div class="grid-container">
+
           <div class="grid-item-container grid-item-container1">
-            <form action="">
+
+            <form action="https://o3m5qixdng.execute-api.us-east-1.amazonaws.com/api/submit" method='POST' id='submitForm'>
               <div class="grid-item">
-                <input type="text" placeholder="First Name">
+                <input type="text" name='name' placeholder="First Name"  required>
               </div>
               <div class="grid-item">
-                <label for="last">Last Name</label>
-                <input type="text" id="last">
+                <input type="text" name='name' placeholder="Last Name"  required>
               </div>
               <div class="grid-item">
-                <label for="email">E-mail</label>
-                <input type="text" id="email">
+                <input type="checkbox" class='check1' id="Check1">
+                <input type="text" placeholder="E-mail">
               </div>
               <div class="grid-item">
-                <label for="phone">Phone Number</label>
-                <input type="text" id="phone">
+                <input type="checkbox" id="Check2">
+                <input type="text" placeholder="Phone Number">
               </div>
               <div class="grid-item">
                 <label for="supervisor">Supervisor</label>
                 <select name="" id="supervisor"></select>
+              </div>
+              <div class="grid-item">
+                <button type="submit" formmethod='post' formaction='https://o3m5qixdng.execute-api.us-east-1.amazonaws.com/api/submit' form="submitForm" id="submitButton">Submit</button>
               </div>
             </form>
 
@@ -61,39 +67,6 @@
 
 
 
-        <!-- <div class="grid-container">
-            <div class="grid-item-container">
-              <form action="https://o3m5qixdng.execute-api.us-east-1.amazonaws.com/api/submit" method="POST">
-                <div class="grid-item">
-                  <label for="first">First Name</label>
-                    <input type="text" id="first" >
-                </div>
-                <div class="grid-item">
-                  <label for="last">Last Name</label>
-                    <input type="text" id="last" >
-                </div>
-
-                <label for="last">Last Name</label>
-                  <input type="text" id="last">
-                <label for="email">E-mail</label>
-                  <input type="text" id="email">
-                <label for="phone">Phone Number</label>
-                <input type="text" id="phone">
-                <label for="cars">Choose a car:</label>
-                  <select name="cars" id="cars">
-                    <optgroup label="Swedish Cars">
-                      <option value="volvo">Volvo</option>
-                      <option value="saab">Saab</option>
-                    </optgroup>
-                    <optgroup label="German Cars">
-                      <option value="mercedes">Mercedes</option>
-                      <option value="audi">Audi</option>
-                    </optgroup>
-                  </select>
-              </form>
-            </div>
-
-        </div> -->
 
 
     </body>
